--- a/tablestakes.dev/index.html
+++ b/tablestakes.dev/index.html
@@ -5,6 +5,6 @@
     <link rel="stylesheet" href="./style/site.css" />
   </head>
   <body>
-    <h1>Hello</h1>
+    <h1>Table Stakes </h1>
   </body>
 </html>
